# Scope

./: .appveyor.yml  .codedocs  .travis.yml  CMakeLists.txt  README.md  conanfile.py
.appveyor/: before-build.cmd
.conan/test_package/: CMakeLists.txt  conanfile.py
.conan/test_package/src/: main.cpp
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.travis/: build.sh  deploy-conan.sh  deploy-doxygen.sh  install.sh
api/latest/: annotated.html  classes.html  dir_5e3f0ad9a252fd90e9c96ff83783df31.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.md5  inherit_graph_1.md5  inherit_graph_3.dot  inherits.html  pages.html
api/latest/d2/dbc/: classscope_1_1unique__resource-members.html
api/latest/d3/dcc/: md__r_e_a_d_m_e.html
api/latest/d5/d80/: classscope_1_1scope__exit.html
api/latest/d6/d26/: classscope_1_1scope__exit__coll__graph.dot
api/latest/d9/dd6/: _r_e_a_d_m_e_8md_source.html
api/latest/da/db7/: classscope_1_1scope__success-members.html
api/latest/db/d7d/: classscope_1_1scope__fail.html
api/latest/dc/d56/: classscope_1_1scope__fail-members.html
api/latest/dc/db2/: classscope_1_1scope__exit-members.html
api/latest/de/d44/: classscope_1_1scope__success.html
api/latest/de/d74/: classscope_1_1unique__resource.html
api/latest/de/d99/: scope_8hpp_source.html
api/latest/html/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.dot  files.html  functions_func.html  inherit_graph_4.dot  inherits.html  navtree.js
api/latest/html/d2/dbc/: classscope_1_1unique__resource-members.html
api/latest/html/d5/d80/: classscope_1_1scope__exit.html
api/latest/html/dc/d56/: classscope_1_1scope__fail-members.html
api/latest/html/dc/db2/: classscope_1_1scope__exit-members.html
api/latest/html/de/d74/: classscope_1_1unique__resource.html  classscope_1_1unique__resource.js
api/latest/html/de/d99/: scope_8hpp_source.html
api/latest/search/: all_5.js  functions_0.js
api/v/: dir_5e3f0ad9a252fd90e9c96ff83783df31.js  dir_5e3f0ad9a252fd90e9c96ff83783df31_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.dot  inherit_graph_4.md5  inherits.html  navtreeindex0.js
api/v/d2/d35/: classscope_1_1scope__success__coll__graph.dot
api/v/d2/dbc/: classscope_1_1unique__resource-members.html
api/v/d3/d80/: classscope_1_1scope__fail__coll__graph.dot
api/v/d6/d26/: classscope_1_1scope__exit__coll__graph.md5
api/v/d6/de6/: classscope_1_1scope__success__inherit__graph.md5
api/v/d9/dd6/: _r_e_a_d_m_e_8md_source.html
api/v/db/d7d/: classscope_1_1scope__fail.html
api/v/dc/d56/: classscope_1_1scope__fail-members.html
api/v/de/d44/: classscope_1_1scope__success.html
api/v/de/d99/: scope_8hpp_source.html
api/v/search/: all_2.js  functions_2.js  functions_3.js
api/v1.0.0/: annotated.html  annotated.js  classes.html  dir_5e3f0ad9a252fd90e9c96ff83783df31.html  dir_5e3f0ad9a252fd90e9c96ff83783df31_dep.dot  files.html  functions.html  functions_func.html  inherit_graph_1.dot  inherit_graph_2.dot  inherit_graph_2.md5  inherit_graph_3.md5  pages.html
api/v1.0.0/d3/d80/: classscope_1_1scope__fail__coll__graph.md5
api/v1.0.0/d3/dcc/: md__r_e_a_d_m_e.html
api/v1.0.0/d5/d80/: classscope_1_1scope__exit.html
api/v1.0.0/da/db7/: classscope_1_1scope__success-members.html
api/v1.0.0/dc/db2/: classscope_1_1scope__exit-members.html
api/v1.0.0/de/d74/: classscope_1_1unique__resource.html
api/v1.0.0/search/: all_3.js  all_4.js  classes_1.js  functions_1.js  search.js
cmake/: ScopeConfig.cmake.in
doc/: installing.md  legal.md  tutorial.md
include/scope/: scope.hpp
test/: CMakeLists.txt
test/src/scope/: scope_exit.test.cpp  scope_fail.test.cpp  scope_success.test.cpp  unique_resource.test.cpp
tools/: run-doxygen.py
